--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+    /* Landing */
+    .landing-container {
+        @apply flex flex-col justify-center
+        items-center w-full h-full;
+    }
+
+    /* Block Details */
+    .details-container {
+        @apply flex flex-col items-center 
+        w-full h-full;
+    }
+
+    /* Sidebar */
+    .sidebar-container {
+        @apply flex flex-col items-center
+        h-screen w-24  m-0 z-50
+        text-2xl shadow-xl font-bold 
+      bg-gray-800 text-white;
+    }
+    .sidebar-icon {
+        @apply flex items-center justify-center 
+        h-12 w-12 mt-2 mb-2 mx-auto
+        bg-gray-900 hover:bg-green-600
+        text-green-500 hover:text-white rounded-3xl 
+        hover:rounded-md
+        transition-all duration-300 ease-linear
+        cursor-pointer shadow-lg;
+    }
+    .sidebar-divider {
+        @apply bg-gray-900 w-20
+        border border-gray-900 rounded-full
+        mx-2 group-hover:bg-green-500
+        group-hover:border-green-500
+        transition-all duration-300 ease-linear;
+    }
+    .sidebar-divider-active {
+        @apply bg-green-500 w-20
+        border border-green-500 rounded-full
+        mx-2;
+    }
+
+    /* Table */
+    .table-header {
+        @apply px-6 py-3 
+        text-left text-xs font-medium 
+        text-white uppercase tracking-wider;
+    }
+    .table-row {
+        @apply border-b border-gray-900
+        hover:bg-gray-700 hover:text-white 
+        hover:border-green-500;
+    }
+    .table-slot {
+        @apply px-6 py-4
+        whitespace-nowrap text-sm 
+        text-gray-500;
+    }
+    .table-row-details {
+        @apply border-b border-gray-900
+        hover:border-green-500;
+    }
+    .table-slot-details {
+        @apply px-6 py-4
+        whitespace-nowrap text-base 
+        text-white;
+    }
+
+    /* Loader */
+    .loader-dot {
+        @apply w-5 h-5 bg-green-500 
+        rounded-full animate-bounce;
+    }
+    .loader div {
+        animation-duration: 0.5s;
+    }
+
+    .loader div:first-child {
+        animation-delay: 0.1s;
+    }
+
+    .loader div:nth-child(2) {
+        animation-delay: 0.3s;
+    }
+
+    .loader div:nth-child(3) {
+        animation-delay: 0.6s;
+    }
 }
